fixing layout issues

--- a/_layouts/style.css
+++ b/_layouts/style.css
@@ -87,7 +87,7 @@ a:hover, a:active, a:focus { /* this group of selectors will give a keyboard nav
 	width: 20%;
 	background: #93A5C4;
 	padding-bottom: 10px;
-	min-height: 500px;
+	min-height: 100%;
 }
 
 .sidebar2 {
